Mulighet for å sette S6_OVERLAY_VERSION til latest

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -7,10 +7,11 @@ ENV TERM=xterm DEBIAN_FRONTEND=noninteractive
 RUN apt-get update && apt-get install -yq openssh-server nano ca-certificates curl openssl xz-utils
 
 # Installerer s6-overlay - https://github.com/just-containers/s6-overlay
-ARG S6_OVERLAY_VERSION="3.1.4.2"
+ARG S6_OVERLAY_VERSION
 ARG TARGETARCH
 ADD s6_install.sh /
 RUN /s6_install.sh
+ENV S6_OVERLAY_VERSION=${S6_OVERLAY_VERSION}
 ENTRYPOINT ["/init"]
 
 # Oppsett for cacerts + oppretting av brukeren java
