--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -39,7 +39,7 @@ definitions:
           - curl -Lso maven-metadata.xml "https://repo1.maven.org/maven2/no/difi/meldingsutveksling/integrasjonspunkt/maven-metadata.xml"
           - export APP_VERSION=$(sed -ne '/latest/{s/.*<latest>\(.*\)<\/latest>.*/\1/p;q;}' <<< cat maven-metadata.xml)
           - echo "Bruker versjon ${APP_VERSION} av integrasjonspunktet"
-          - envsubst < "docker/motd.sh" > "docker/motd.sh"
+          - envsubst < "docker/motd.template" > "docker/motd.sh"
           - curl -L https://depot.dev/install-cli.sh | DEPOT_INSTALL_DIR=/usr/local/bin sh
           - *registryLogin
           - depot bake --project ${DEPOT_PID} --push -f docker-bake.hcl ${APP_ENV}
