--- a/docker/motd.template
+++ b/docker/motd.template
@@ -1,6 +1,5 @@
 #!/command/with-contenv bash
 
-d=$(date '+%d-%m-%Y %T %Z')
 echo "####################################################"
 echo "    D I B K    I N T E G R A S J O N S P U N K T"
 echo "####################################################"
@@ -8,5 +7,4 @@ echo "Docker-konteiner for Azure Web App med:"
 echo "  - Digdir Integrasjonspunkt v${APP_VERSION} (port ${SERVER_PORT})"
 echo "  - SSH (port 2222)"
 echo "-----------------------------------------------------"
-echo "  Tidspunkt: $d"
-echo "-----------------------------------------------------"
+echo ""
