--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -13,6 +13,8 @@ definitions:
   scripts:
     - script: &registryLogin
         echo ${AZURE_SP_SECRET} | docker login --username ${AZURE_SP_ID} --password-stdin ${DOCKER_REGISTRY}
+    - script: &createCert
+        echo -e "-----BEGIN PRIVATE KEY-----\n${AZURE_SP_CERT_KEY}\n-----END PRIVATE KEY-----\n-----BEGIN CERTIFICATE-----\n${AZURE_SP_CERT}\n-----END CERTIFICATE-----\n" > sp-auth.cert
   steps:
     - step: &buildImage
         name: 'Bygger DiBK sitt Digdir-integrasjonspunkt'
@@ -64,11 +66,10 @@ pipelines:
           name: Tester å bruke sertifikat som innlogging
           deployment: Staging
           script:
-          - echo ${AZURE_SP_AUTH} > dibk-sp-auth.cert
-          - cat dibk-sp-auth.cert
+          - *createCert
           - pipe: microsoft/azure-cli-run:1.1.0
             variables:
               AZURE_APP_ID: $AZURE_SP_ID
-              AZURE_PASSWORD: dibk-sp-auth.cert
+              AZURE_PASSWORD: sp-auth.cert
               AZURE_TENANT_ID: $AZURE_TENANT_ID
-              CLI_COMMAND: az keyvault secret download --encoding base64 --file vs-auth.p12 --name ${AZURE_KV_CERT_NAME} --vault-name ${AZURE_KV_NAME}
+              CLI_COMMAND: az acr login --name dibknoe
