Tester å skrive config til config.json

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -51,8 +51,8 @@ definitions:
               AZURE_APP_ID: $AZURE_SP_ID
               AZURE_PASSWORD: sp-auth.cert
               AZURE_TENANT_ID: $AZURE_TENANT_ID
-              CLI_COMMAND: JSON=$(az acr login --name ${DOCKER_REGISTRY} --output json)
-          - echo ${JSON} > ${HOME}/.docker/config.json
+              CLI_COMMAND: az acr login --name ${DOCKER_REGISTRY} --output json > ${HOME}/.docker/config.json
+          - docker pull dibknoe.azurecr.io/php:latest
           - depot bake --project ${DEPOT_PID} --push -f docker-bake.hcl ${APP_ENV}
 
 
