--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -7,7 +7,8 @@
 # AZURE_SP_SECRET Secret for Azure SP
 # AZURE_TENANT_ID Tenant-ID for Service Principal i Azure
 
-image: atlassian/default-image:4 # Uses Atlassian's default image as default
+# image: atlassian/default-image:4 # Uses Atlassian's default image as default
+image: mcr.microsoft.com/azure-cli:latest
 
 definitions:
   scripts:
@@ -26,12 +27,13 @@ definitions:
           - *createCert
           - envsubst < "integrasjonspunkt-local.properties.dist" > "integrasjonspunkt-local.properties"
           - echo "Laster ned Virksomhetssertifikat"
-          - pipe: microsoft/azure-cli-run:1.1.0
-            variables:
-              AZURE_APP_ID: $AZURE_SP_ID
-              AZURE_PASSWORD: sp-auth.cert
-              AZURE_TENANT_ID: $AZURE_TENANT_ID
-              CLI_COMMAND: az keyvault secret download --encoding base64 --file vs-auth.p12 --name ${AZURE_KV_CERT_NAME} --vault-name ${AZURE_KV_NAME}
+          - az keyvault secret download --encoding base64 --file vs-auth.p12 --name ${AZURE_KV_CERT_NAME} --vault-name ${AZURE_KV_NAME}
+          # - pipe: microsoft/azure-cli-run:1.1.0
+          #   variables:
+          #     AZURE_APP_ID: $AZURE_SP_ID
+          #     AZURE_PASSWORD: sp-auth.cert
+          #     AZURE_TENANT_ID: $AZURE_TENANT_ID
+          #     CLI_COMMAND: az keyvault secret download --encoding base64 --file vs-auth.p12 --name ${AZURE_KV_CERT_NAME} --vault-name ${AZURE_KV_NAME}
           - echo "Laster ned CA-sertifikater fra BuyPass og Commfides"
           - mkdir -p docker/trustcerts
           - curl -Lso docker/trustcerts/BuyPassClass3RootCA.cer "https://github.com/felleslosninger/docs/raw/gh-pages/resources/begrep/sikkerDigitalPost/sikkerhet/sertifikater/prod/BPClass3RootCA.cer"
@@ -46,12 +48,7 @@ definitions:
           - echo "Bruker versjon ${APP_VERSION} av integrasjonspunktet"
           - envsubst < "docker/motd.template" > "docker/motd.sh"
           - curl -L https://depot.dev/install-cli.sh | DEPOT_INSTALL_DIR=/usr/local/bin sh
-          - pipe: microsoft/azure-cli-run:1.1.0
-            variables:
-              AZURE_APP_ID: $AZURE_SP_ID
-              AZURE_PASSWORD: sp-auth.cert
-              AZURE_TENANT_ID: $AZURE_TENANT_ID
-              CLI_COMMAND: 'az acr login --name ${DOCKER_REGISTRY}'
+          - az acr login --name ${DOCKER_REGISTRY}
           - docker pull dibknoe.azurecr.io/php:latest
           - depot bake --project ${DEPOT_PID} --push -f docker-bake.hcl ${APP_ENV}
 
