--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -18,7 +18,7 @@ definitions:
     - script: &registryLogin
         echo ${AZURE_SP_SECRET} | docker login --username ${AZURE_SP_ID} --password-stdin ${DOCKER_REGISTRY}
   steps:
-    - step: &buildImage
+    - step: &buildImageX86
         name: 'Bygger DiBK sitt Digdir-integrasjonspunkt'
         caches:
           - docker
@@ -55,18 +55,48 @@ definitions:
           - docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
           - docker buildx create --name bob-the-builder --use
           - docker buildx bake --pull --push --file docker-bake.hcl ${APP_ENV}  
-
+    - step: &buildImageMacOS
+        name: Bygger image på macOS
+        runs-on:
+          - macos
+          - applesilicon
+        script:
+          - envsubst < "integrasjonspunkt-local.properties.dist" > "integrasjonspunkt-local.properties"
+          - echo "Laster ned Virksomhetssertifikat"
+          - pipe: microsoft/azure-cli-run:1.1.0
+            variables:
+              AZURE_APP_ID: $AZURE_SP_ID
+              AZURE_PASSWORD: $AZURE_SP_SECRET
+              AZURE_TENANT_ID: $AZURE_TENANT_ID
+              CLI_COMMAND: az keyvault secret download --encoding base64 --file vs-auth.p12 --name ${AZURE_KV_CERT_NAME} --vault-name ${AZURE_KV_NAME}
+          - echo "Laster ned CA-sertifikater fra BuyPass og Commfides"
+          - mkdir -p docker/trustcerts
+          - curl -Lso docker/trustcerts/BuyPassClass3RootCA.cer "https://github.com/felleslosninger/docs/raw/gh-pages/resources/begrep/sikkerDigitalPost/sikkerhet/sertifikater/prod/BPClass3RootCA.cer"
+          - curl -Lso docker/trustcerts/CommfidesClass3RootCA.cer "https://github.com/felleslosninger/docs/raw/gh-pages/resources/begrep/sikkerDigitalPost/sikkerhet/sertifikater/prod/cpn%20rootca%20sha256%20class%203.crt"
+          - empty=
+          - echo "Oppretter passord på virksomhetssertifikatet"
+          - openssl pkcs12 -in vs-auth.p12 -passin pass:$empty -nodes -out vs-auth.pem
+          - openssl pkcs12 -export -in vs-auth.pem -out auth.p12 -passout pass:${KEYSTORE_PASS} -name ${KEYSTORE_ALIAS}
+          - echo "Finner versjonsnummer på siste versjon av integrasjonspunktet"
+          - curl -Lso maven-metadata.xml "https://repo1.maven.org/maven2/no/difi/meldingsutveksling/integrasjonspunkt/maven-metadata.xml"
+          - export APP_VERSION=$(sed -ne '/latest/{s/.*<latest>\(.*\)<\/latest>.*/\1/p;q;}' <<< cat maven-metadata.xml)
+          - echo "Bruker versjon ${APP_VERSION} av integrasjonspunktet"
+          - envsubst < "docker/motd.template" > "docker/motd.sh"
+          - unset DOCKER_HOST
+          - *registryLogin
+          - docker buildx bake --pull --push --file docker-bake.hcl ${APP_ENV}
+          - docker system prune -fa
 pipelines:
   branches:
     master:
       - step:
-          <<: *buildImage
+          <<: *buildImageMacOS
           name: 'Bygger integrasjonspunkt for staging-miljøet'
           deployment: Staging
   custom:
     build-production:
       - step:
-          <<: *buildImage
+          <<: *buildImageMacOS
           name: 'Bygger integrasjonspunkt for produksjon'
           deployment: Production
           
