--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -15,8 +15,9 @@ definitions:
       image: docker:dind
 
   scripts:
-    - script: &registryLogin
-        echo ${AZURE_SP_SECRET} | docker login --username ${AZURE_SP_ID} --password-stdin ${DOCKER_REGISTRY}
+    - script: &constructCert
+        echo "-----BEGIN CERTIFICATE-----" > spauth.pem && echo ${AZURE_SP_CERT} >> spauth.pem && echo "-----END CERTIFICATE-----" >> spauth.pem && echo "-----BEGIN PRIVATE KEY-----" >> spauth.pem && echo ${AZURE_SP_KEY} >> spauth.pem && echo "-----END PRIVATE KEY-----" >> spauth.pem
+
   steps:
     - step: &buildImageX86
         name: 'Bygger DiBK sitt Digdir-integrasjonspunkt'
@@ -55,6 +56,7 @@ definitions:
           - docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
           - docker buildx create --name bob-the-builder --use
           - docker buildx bake --pull --push --file docker-bake.hcl ${APP_ENV}  
+
     - step: &buildImageMacOS
         name: Bygger image på macOS
         runs-on:
@@ -65,7 +67,8 @@ definitions:
           - unset DOCKER_HOST
           - envsubst < "integrasjonspunkt-local.properties.dist" > "integrasjonspunkt-local.properties"
           - echo "Laster ned Virksomhetssertifikat"
-          - az login --service-principal -u $AZURE_SP_ID -p $AZURE_SP_SECRET --tenant $AZURE_TENANT_ID
+          - *constructCert
+          - az login --service-principal -u $AZURE_SP_ID -p spauth.pem --tenant $AZURE_TENANT_ID
           - az keyvault secret download --encoding base64 --file vs-auth.p12 --name ${AZURE_KV_CERT_NAME} --vault-name ${AZURE_KV_NAME}
           - az acr login --name dibknoe
           - echo "Laster ned CA-sertifikater fra BuyPass og Commfides"
