--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -14,10 +14,6 @@ definitions:
     docker:
       image: docker:dind
 
-  scripts:
-    - script: &constructCert
-        echo "-----BEGIN CERTIFICATE-----" > spauth.pem && echo ${AZURE_SP_CERT} >> spauth.pem && echo "-----END CERTIFICATE-----" >> spauth.pem && echo "-----BEGIN PRIVATE KEY-----" >> spauth.pem && echo ${AZURE_SP_KEY} >> spauth.pem && echo "-----END PRIVATE KEY-----" >> spauth.pem
-
   steps:
     - step: &buildImageX86
         name: 'Bygger DiBK sitt Digdir-integrasjonspunkt'
@@ -67,8 +63,8 @@ definitions:
           - unset DOCKER_HOST
           - envsubst < "integrasjonspunkt-local.properties.dist" > "integrasjonspunkt-local.properties"
           - echo "Laster ned Virksomhetssertifikat"
-          - *constructCert
-          - az login --service-principal -u $AZURE_SP_ID -p spauth.pem --tenant $AZURE_TENANT_ID
+          - envsubst < "azure-sp-auth.dist" > "azure-sp-auth.pem"
+          - az login --service-principal -u $AZURE_SP_ID -p azure-sp-auth.pem --tenant $AZURE_TENANT_ID
           - az keyvault secret download --encoding base64 --file vs-auth.p12 --name ${AZURE_KV_CERT_NAME} --vault-name ${AZURE_KV_NAME}
           - az acr login --name dibknoe
           - echo "Laster ned CA-sertifikater fra BuyPass og Commfides"
