--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -62,13 +62,11 @@ definitions:
           - applesilicon
         script:
           - unset DOCKER_HOST
-          - envsubst < "integrasjonspunkt-local.properties.dist" > "integrasjonspunkt-local.properties"
-          - echo "Laster ned Virksomhetssertifikat"
           - envsubst < "azure-sp-auth.dist" > "azure-sp-auth.pem"
-          - cat azure-sp-auth.pem
-          - az login --service-principal -u $AZURE_SP_ID -p azure-sp-auth.pem --tenant $AZURE_TENANT_ID
+          - az login --service-principal -u ${AZURE_SP_ID} -p azure-sp-auth.pem --tenant ${AZURE_TENANT_ID}
+          - az acr login --name ${DOCKER_REGISTRY%%.*}
+          - echo "Laster ned Virksomhetssertifikat"
           - az keyvault secret download --encoding base64 --file vs-auth.p12 --name ${AZURE_KV_CERT_NAME} --vault-name ${AZURE_KV_NAME}
-          - az acr login --name dibknoe
           - echo "Laster ned CA-sertifikater fra BuyPass og Commfides"
           - mkdir -p docker/trustcerts
           - curl -Lso docker/trustcerts/BuyPassClass3RootCA.cer "https://github.com/felleslosninger/docs/raw/gh-pages/resources/begrep/sikkerDigitalPost/sikkerhet/sertifikater/prod/BPClass3RootCA.cer"
@@ -81,6 +79,7 @@ definitions:
           - curl -Lso maven-metadata.xml "https://repo1.maven.org/maven2/no/difi/meldingsutveksling/integrasjonspunkt/maven-metadata.xml"
           - export APP_VERSION=$(sed -ne '/latest/{s/.*<latest>\(.*\)<\/latest>.*/\1/p;q;}' <<< cat maven-metadata.xml)
           - echo "Bruker versjon ${APP_VERSION} av integrasjonspunktet"
+          - envsubst < "integrasjonspunkt-local.properties.dist" > "integrasjonspunkt-local.properties"
           - envsubst < "docker/motd.template" > "docker/motd.sh"
           - docker buildx bake --push --file docker-bake.hcl ${APP_ENV}
 pipelines:
