--- a/.github/workflows/test_azure_login.yml
+++ b/.github/workflows/test_azure_login.yml
@@ -6,7 +6,13 @@ on:
 jobs:
     login:
         runs-on: [self-hosted, macOS]
+        environment: production
         steps:
-            - uses: azure/login@v2
-              with:
-                creds: '{"clientId":"${{ vars.AZURE_SP_ID }}","clientSecret":"${{ secrets.AZURE_SP_CERT }}","subscriptionId":"${{ vars.AZURE_SP_SUB_ID }}","tenantId":"${{ vars.AZURE_TENANT_ID }}"}'
+            - name: Azure CLI login
+              run: |
+                echo "${{ secrets.AZURE_SP_CERT }}" > sp.cert
+                az login --service-principal --name ${{ vars.AZURE_SP_ID }} --password -/sp.cert --tenant-id ${{ vars.AZURE_TENANT_ID }}
+            - name: Henter virksomhetssertifikat fra Key Vault
+              run: |
+                az keyvault secret download --name ${{ vars.AZURE_KV_CERT_NAME }} --encoding base64 --file vs.p12 --keyvault-name dibk-kv-norway
+                 
