--- a/.github/workflows/test_azure_login.yml
+++ b/.github/workflows/test_azure_login.yml
@@ -14,5 +14,5 @@ jobs:
                 az login --service-principal -u ${{ vars.AZURE_SP_ID }} -p ./sp.cert --tenant ${{ vars.AZURE_TENANT_ID }}
             - name: Henter virksomhetssertifikat fra Key Vault
               run: |
-                az keyvault secret download --name ${{ vars.AZURE_KV_CERT_NAME }} --encoding base64 --file vs.p12 --keyvault-name dibk-kv-norway
+                az keyvault secret download --encoding base64 --name ${{ vars.AZURE_KV_CERT_NAME }} --file vs.p12 --vault-name ${{ vars.KEYVAULT_NAME }}
 
