Korrigerte peker til docker-bake.hcl

--- a/.github/workflows/main_dibk-ip-prod.yml
+++ b/.github/workflows/main_dibk-ip-prod.yml
@@ -103,7 +103,7 @@ jobs:
         SHA: ${{ github.sha }}
         APP_DIR: ${{env.appDir}}
       with:
-        files: 'docker/docker-bake.hcl'
+        files: 'docker-bake.hcl'
         push: true
   
   deploy:
