--- a/.github/workflows/main_dibk-ip-prod.yml
+++ b/.github/workflows/main_dibk-ip-prod.yml
@@ -51,6 +51,7 @@ jobs:
         echo "${{ secrets.AZURE_SP_CERT }}" > sp.cert
         az login --service-principal -u ${{ vars.AZURE_SP_ID }} -p ./sp.cert --tenant ${{ vars.AZURE_TENANT_ID }}
         az acr login --name ${{vars.ACR}}
+
     - name: Henter virksomhetssertifikat fra Key Vault og setter passord på det
       run: |
         az keyvault secret download --encoding base64 --name ${{ vars.AZURE_KV_CERT_NAME }} --file vs.p12 --vault-name ${{ vars.KEYVAULT_NAME }}
@@ -59,8 +60,18 @@ jobs:
         openssl pkcs12 -export -in vs-auth.pem -out auth.p12 -passout pass:${{secrets.KEYSTORE_PASS}} -name ${{vars.KEYSTORE_ALIAS}}
         rm vs-auth.pem vs.p12
 
+    - name: Henter inn CA-sertifikater fra cache
+      uses: actions/cache@v4
+      id: ca-certs-cache
+      env:
+        cache-name: ca-certs-cache
+      with:
+        path: docker/trustcerts
+        key: ${{env.cache-name}}-${{ hashFiles('docker/trustcerts/*') }}
+        restore-keys: ${{ env.cache-name }}-
 
     - name: Henter inn CA-sertifikater
+      if: steps.ca-certs-cache.outputs.cache-hit != 'true'
       run: |
         mkdir -p docker/trustcerts
         curl -Lso docker/trustcerts/BuyPassClass3RootCA.cer "https://github.com/felleslosninger/docs/raw/gh-pages/resources/begrep/sikkerDigitalPost/sikkerhet/sertifikater/prod/BPClass3RootCA.cer"
@@ -118,6 +129,7 @@ jobs:
         ACRPATH: ${{ env.acrPath }}
         SHA: ${{ github.sha }}
         APP_DIR: ${{env.appDir}}
+        SERVER_PORT: ${{vars.SERVER_PORT}}
       with:
         files: 'docker-bake.hcl'
         push: true
